--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
      </div>
      <!-- Hero Section -->
    <section class="hero">
-     <img class="images" src="images/Emily Heyrman Logo.png"/>
-     <img class="images" src="images/feathers.jpg"/>
+     <img class="images" src="images/EmilyHeyrmanLogo.png" alt="Emily Heyrman Logo"/>
+     <img class="images" src="images/feathers.jpg" alt="Hero Background Image"/>
        <h1>Hi, my name is Emily Heyrman</h1>
        <h2>I'm a UX/UI Designer bassed in Upper Michigan. Some people look for beautiful places, others make a place beautiful.</h2>
    </section>
    <!-- My Journey Section -->
         <section class="my journey">
-          <img class="images" src="images/Summer and Me.jpg"/>
+          <img class="images" src="images/SummerAndMe.jpg" alt="Personal Image"/>
             <h2>The Story of Me</h2>
             <p>The journey that led me to this exact moment</p>
-            <button class="My Life"><a href=" ">My Life</a></button>
+            <button class="My Life"><a href="journey.html">My Life</a></button>
         </section>
   <!-- Save Safe Case Study Section -->
   <section class="Save Safe" id="journey">
-    <img class="images" src="images/Save Safe Home Page.jpg"/>
+    <img class="images" src="images/SaveSafeHomePage.jpg" alt="Save Safe Image on Desktop"/>
       <h2>Save Safe</h2>
       <p>Cloud storage app for the everyday saver.</p>
       <h3>UX/UI Designer | Prototype</h3>
@@ -38,31 +38,26 @@
   <!-- Lets Talk Section -->
   <footer class="lets-talk-links" id="contact">
       <h1>Let's Talk</h1>
-      <a href="mailto:{flynns_shutters@hotmail.com}">flynns_shutters@hotmail.com</a>
+      <a href="mailto:flynns_shutters@hotmail.com" target="_blank"> flynns_shutters@hotmail.com</a>
       <ul class="footer__link-list">
         <li>
-      <a href="{https://www.linkedin.com/in/emily-heyrman-a6504417b/}">
+      <a href="https://www.linkedin.com/in/emily-heyrman-a6504417b" target="_blank">
         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
       </a>
     </li>
     <li>
-      <a href="{https://github.com/EmilyHeyrman}">
+      <a href="https://github.com/EmilyHeyrman" target="_blank">
         <i class="fa fa-github-square" aria-hidden="true"></i>
       </a>
     </li>
     <li>
-      <a href="{https://www.facebook.com/emily.flynn.31?ref=bookmarks}">
+      <a href="https://www.facebook.com/emily.flynn.31?ref=bookmarks" target="_blank">
         <i class="fa fa-facebook-square" aria-hidden="true"></i>
       </a>
     </li>
     <li>
-      <a href="{https://twitter.com/HeyrmanEmily}">
+      <a href="https://twitter.com/HeyrmanEmily" target="_blank">
         <i class="fa fa-twitter-square" aria-hidden="true"></i>
-      </a>
-    </li>
-    <li>
-      <a href="mailto:{Your email address}">
-        <i class="fa fa-envelope-square" aria-hidden="true"></i>
       </a>
     </li>
       </ul>
