--- a/journey.html
+++ b/journey.html
@@ -14,7 +14,7 @@
     </div>
     <!-- Hero Section -->
   <section class="hero">
-    <img class="images" src="images/My Journey Image.jpg"/>
+    <img class="images" src="images/MyJourneyImage.jpg" alt="My Journey Header Image"/>
       <h1>My Journey to UX/UI Design</h1>
         <p>I always found the joy of drawing, and had the privilege to go to Disney World. I loved going to the artist and design buildings at Disney and watching the artist build and create new artwork. I was watching this one artist draw Mickey Mouse on the main street of the magic kingdom. He looked up at me and asked ” would you like to learn how to draw Mickey Mouse”? With excitement I said “yes”. He let me sit in his art studio and step by step taught me how to draw Mickey Mouse. This   moment made me realize I wanted to do something in the world of art, but what. </p>
         <p>In high school I still had the passion for art, it was the one thing I was really good at. I had a hard time with other subjects in school. Finding myself in special education classes for reading and math it was frustrating. The only real class I would get excited about was art class. One of my art teachers introduced me to photography and Photoshop. Lets just say my early work of PhotoShop was not the best, but I learned. I loved taking a photo and making it better with adobe programs. There is always a way to make something better, and this made me start thinking of a career in design. I loved the art of Photography and it brought my love of electronics and art into one feeled . At this point I knew I wanted to go to college for Photography. </p>
@@ -24,31 +24,26 @@
   <!-- Lets Talk Section -->
   <footer class="lets-talk-links">
       <h1>Let's Talk</h1>
-      <a href="mailto:{flynns_shutters@hotmail.com}">flynns_shutters@hotmail.com</a>
+      <a href="mailto:flynns_shutters@hotmail.com" target="_blank"> flynns_shutters@hotmail.com</a>
       <ul class="footer__link-list">
         <li>
-      <a href="{https://www.linkedin.com/in/emily-heyrman-a6504417b/}">
+      <a href="https://www.linkedin.com/in/emily-heyrman-a6504417b/" target="_blank">
         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
       </a>
     </li>
     <li>
-      <a href="{https://github.com/EmilyHeyrman}">
+      <a href="https://github.com/EmilyHeyrman" target="_blank">
         <i class="fa fa-github-square" aria-hidden="true"></i>
       </a>
     </li>
     <li>
-      <a href="{https://www.facebook.com/emily.flynn.31?ref=bookmarks}">
+      <a href="https://www.facebook.com/emily.flynn.31?ref=bookmarks" target="_blank">
         <i class="fa fa-facebook-square" aria-hidden="true"></i>
       </a>
     </li>
     <li>
-      <a href="{https://twitter.com/HeyrmanEmily}">
+      <a href="https://twitter.com/HeyrmanEmily" target="_blank">
         <i class="fa fa-twitter-square" aria-hidden="true"></i>
-      </a>
-    </li>
-    <li>
-      <a href="mailto:{Your email address}">
-        <i class="fa fa-envelope-square" aria-hidden="true"></i>
       </a>
     </li>
       </ul>
