--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
     </div>
     <!-- Hero Section -->
   <section class="hero">
-    <img class="images" src="images/Case Study Hero Photo.jpg"/>
+    <img class="images" src="images/CaseStudyHeroPhoto.jpg" alt="Case Study Hero Photo"/>
       <h1>Save Safe Case Study</h1>
       <h2>Cloud storage app for the everyday saver.</h2>
         <button class="Prototype"><a href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down ">Prototype</a></button>
@@ -23,16 +23,18 @@
   <section class="Overview">
       <h1>Overview</h1>
       <h3>Role</h3>
-         <ul>UX, Visual Design & Branding</ul>
       <h3>Tools</h3>
-         <ul>Figma,Invision,Google Docs & Adobe Photoshop</ul>
       <h3>Date</h3>
-         <ul>Winter 2019</ul>
       <h3>Skills</h3>
-         <ul>Survey design, competitive analysis, user stories and flows, creating personas, conducting user interviews and observations, sketching, wireframing, prototyping, user testing & analysis</ul>
+       <ul>
+          <li>UX, Visual Design & Branding</li>
+          <li>Figma,Invision,Google Docs & Adobe Photoshop</li>
+          <li>Winter 2019</li>
+          <li>Survey design, competitive analysis, user stories and flows, creating personas, conducting user interviews and observations, sketching, wireframing, prototyping, user testing & analysis</li>
+       </ul>
   </section>
   <!-- Problem Section -->
-<section class="Problem">
+  <section class="Problem">
     <h1>Problem</h1>
       <h3>There was multiple items needed to be solved for this projact.</h3>
      <ul>
@@ -49,15 +51,15 @@
 </section>
 <!-- Solution Section -->
 <section class="Solution">
- <img class="images" src="images/Solution Photo Section.jpg"/>
+ <img class="images" src="images/SolutionPhotoSection.jpg" alt="Solution Photo Section"/>
    <h1>Solution</h1>
      <p>A easy to use cloud storage survice called Save Safe. This application is great for every type of user that allows you to save, edit and organize your data on the go. </p>
 </section>
-<!-- Hero Section -->
+<!-- Process Section -->
 <section class="Process Section">
   <h1>Process</h1>
      <p> The cloud storage service is growing and the client seen a opening that allowed users to save everything in one location, but needed help laying and designing this application. This is where I came in, I used the following tools to develop what was needed for Save Safe.</p>
-<ul>
+ <ul>
     <li>User Surveys</li>
     <li>User Surveys</li>
     <li>SWOT Analysis</li>
@@ -69,7 +71,7 @@
     <li>Branding Work</li>
     <li>Typface</li>
     <li>Prototype</li>
-</ul>
+ </ul>
 </section>
 <!-- User Surveys Section -->
 <section class="User Surveys Section">
@@ -83,10 +85,10 @@
 </section>
 <!-- Persona Section -->
 <section class="Personas Section">
-<img class="images" src="images/Persona Section Photo.jpg"/>
+<img class="images" src="images/PersonaSectionPhoto.jpg" alt="Persona Section Photo"/>
   <h1>Personas</h1>
      <p>User Personas showed me about what type of users will want to use this application. It allowed me to see the age difference and goals of each user and how each user may not use the application the same way. </p>
-  <img class="images" src="images/Personas.jpg"/>
+  <img class="images" src="images/Personas.jpg" alt="Personas"/>
 </section>
 <!-- User Stories Section-->
 <section class="User Stories Section">
@@ -97,41 +99,43 @@
 <section class="User Flows Section">
   <h1>USer Flows</h1>
      <p>I designed user flows after the following tests and research to figure out what would be the best and easiest way to complete high priority tasks for the user. This allows me to make changes easier before designing and layout every page needed.</p>
-    <img class="images" src="images/User Flows Sketches.jpg"/>
-  <img class="images" src="images/User Flows Digital .jpg"/>
+    <img class="images" src="images/UserFlowsSketches.jpg" alt="User Flow Sketches"/>
+  <img class="images" src="images/UserFlowsDigital.jpg" alt="User Flow Digital"/>
 </section>
 <!-- Wireframes Section -->
 <section class="Wireframes Section">
-<img class="images" src="images/Wireframes Image.jpg"/>
+<img class="images" src="images/WireframesImage.jpg" alt="Wireframe Section Image"/>
   <h1>Wireframes</h1>
      <p>Wireframes are a great way to figure out if the user finds the layout simple or hard to understand without pudding a lot of effort into the design process of this application. </p>
-   <img class="images" src="images/Wireframe Drawings.jpg"/>
-  <img class="images" src="images/Wireframe Digital.jpg"/>
+   <img class="images" src="images/WireframeDrawings.jpg" alt="Wireframe Drawings"/>
+  <img class="images" src="images/WireframeDigital.jpg" alt="Wireframe Digital"/>
 </section>
 <!-- Analysis of Test Section -->
 <section class="Analysis of Test Section">
   <h1>Analysis of Test</h1>
   <h3>Test 1</h3>
-     <ul>During the first test, the tester worked Through the functions well. The tester had a hard time understanding some of the names of the buttons so this is something I needed to go back and work on.</ul>
   <h3>Test 2</h3>
-     <ul>Overall this testers process went well. The tester didnt know how to organize photos, so I would like to figure out a better way to organize the photos into groups for the users.</ul>
   <h3>Test 3</h3>
-     <ul>During this usability test I learned that I could work on the name of the buttons. For they where confusing for this tester. </ul>
+  <ul>
+     <li>During the first test, the tester worked Through the functions well. The tester had a hard time understanding some of the names of the buttons so this is something I needed to go back and work on.</li>
+     <li>Overall this testers process went well. The tester didnt know how to organize photos, so I would like to figure out a better way to organize the photos into groups for the users.</li>
+     <li>During this usability test I learned that I could work on the name of the buttons. For they where confusing for this tester. </li>
+ </ul>
 </section>
 <!-- Mockup Section -->
 <section class="Mockup Section">
-<img class="images" src="images/Mockups Photo.jpg"/>
+<img class="images" src="images/MockupsPhoto.jpg" alt="Mockup Photo Section"/>
   <h1>Mockups</h1>
      <p>When developing my mockups I needed to revisit the coloring of the site. Some of my colors used in the application at first try did not work well together for every user. So the second time visiting the mockups I tested the colors against each other to make sure they work well for each user and they did. </p>
-   <img class="images" src="images/Mockups.jpg"/>
+   <img class="images" src="images/Mockups.jpg" alt="Mockups Photo"/>
 </section>
 <!-- Branding Section -->
 <section class="Branding Section">
   <h1>Branding</h1>
-     <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches till I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experiance. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
-   <img class="images" src="images/Sketching for Logo.png"/>
-   <img class="images" src="images/Colors.png"/>
-   <img class="images" src="images/Logos Digital.png"/>
+      <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches till I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experiance. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
+   <img class="images" src="images/SketchingForLogo.png" alt="Sketching for Logo Image"/>
+   <img class="images" src="images/Colors.png" alt="Color Image"/>
+   <img class="images" src="images/LogosDigital.png" alt="Logo Digital Image"/>
 </section>
 <!-- Typeface Section -->
 <section class="Typeface Section">
@@ -143,7 +147,7 @@
 </section>
 <!-- Prototype Section -->
 <section class="Prototype">
-<img class="images" src="images/Prototype Photo.jpg"/>
+<img class="images" src="images/PrototypePhoto.jpg" alt="Prototype Photo"/>
   <h1>Prototype</h1>
   <p>Great feedback about names and functions that needed to be added to this application to make it easier for the user.I also needed to add a photo group area to this application.</p>
 </section>
@@ -151,11 +155,13 @@
 <section class="Analysis of Test 2">
   <h1>Analysis of Test</h1>
   <h3>Test 1</h3>
-     <ul>Overall the test went very well. The tester didn’t have any issue with completing any of the tasks. The one thing that I thought of after going over all of the tests and questions asked. is the Drag and Drop page. This works well for a desktop layout but for mobile it doesn't work for the user. </ul>
   <h3>Test 2</h3>
-     <ul>After this test I went over all of my results. I found out that I don’t have a area where users can view groups of images. This would be a great thing to add to the dashboard page for the users. I am going to play with some idea on where to place this function to make it easy for the users to view.</ul>
   <h3>Test 3</h3>
-     <ul>During this test I wrote down some items that I need to look into to make it less confusing for the users. The name in the new link I need to review. The names on the buttons don’t seem to be clear to the users so I would like to look into better names for those buttons. Also the groups for images again. I need to find a good location for those groups to be located for the users.</ul>
+   <ul>
+      <li>Overall the test went very well. The tester didn’t have any issue with completing any of the tasks. The one thing that I thought of after going over all of the tests and questions asked. is the Drag and Drop page. This works well for a desktop layout but for mobile it doesn't work for the user. </li>
+      <li>After this test I went over all of my results. I found out that I don’t have a area where users can view groups of images. This would be a great thing to add to the dashboard page for the users. I am going to play with some idea on where to place this function to make it easy for the users to view.</li>
+      <li>During this test I wrote down some items that I need to look into to make it less confusing for the users. The name in the new link I need to review. The names on the buttons don’t seem to be clear to the users so I would like to look into better names for those buttons. Also the groups for images again. I need to find a good location for those groups to be located for the users.</li>
+   </ul>
 </section>
 <!-- Conclusion Section -->
 <section class="Conclusion">
@@ -165,31 +171,26 @@
 <!-- Lets Talk Section -->
 <footer class="lets-talk-links">
     <h1>Let's Talk</h1>
-    <a href="mailto:{flynns_shutters@hotmail.com}">flynns_shutters@hotmail.com</a>
+    <a href="mailto:flynns_shutters@hotmail.com" target="_blank">flynns_shutters@hotmail.com</a>
     <ul class="footer__link-list">
       <li>
-    <a href="{https://www.linkedin.com/in/emily-heyrman-a6504417b/}">
+    <a href="https://www.linkedin.com/in/emily-heyrman-a6504417b/" target="_blank">
       <i class="fa fa-linkedin-square" aria-hidden="true"></i>
     </a>
   </li>
   <li>
-    <a href="{https://github.com/EmilyHeyrman}">
+    <a href="https://github.com/EmilyHeyrman" target="_blank">
       <i class="fa fa-github-square" aria-hidden="true"></i>
     </a>
   </li>
   <li>
-    <a href="{https://www.facebook.com/emily.flynn.31?ref=bookmarks}">
+    <a href="https://www.facebook.com/emily.flynn.31?ref=bookmarks" target="_blank">
       <i class="fa fa-facebook-square" aria-hidden="true"></i>
     </a>
   </li>
   <li>
-    <a href="{https://twitter.com/HeyrmanEmily}">
+    <a href="https://twitter.com/HeyrmanEmily" target="_blank">
       <i class="fa fa-twitter-square" aria-hidden="true"></i>
-    </a>
-  </li>
-  <li>
-    <a href="mailto:{Your email address}">
-      <i class="fa fa-envelope-square" aria-hidden="true"></i>
     </a>
   </li>
     </ul>
